@@ -1,5 +1,4 @@
  ** check that the blocking is correct on DBusAsyncReply and add an explicit timeout value
- * only hold weak refs to user objects and reply correctly when they have gone
  * Javadoc
  * document that we handle Introspect for you 
  * add header checks to daemon
